@@ -63,6 +63,7 @@
       <li><a href="rdoc/classes/Roda/RodaPlugins/ContentFor.html">content_for</a>: Allows storage of content in one template and retrieval of that content in a different template.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/ExceptionPage.html">exception_page</a>: Shows page with debugging information for exceptions, designed for use in error handler in development mode.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/H.html">h</a>: Adds h method for html escaping.</li>
+      <li><a href="rdoc/classes/Roda/RodaPlugins/HashBranchViewSubdir.html">hash_branch_view_subdir</a>: Automatically appends a view subdirectory for each successful hash branch taken.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/InjectERB.html">inject_erb</a>: Allows injecting arbitrary content directly into ERB template output.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/Json.html">json</a>: Allows match blocks to return arrays and hashes, using a json representation as the response body.</li>
       <li><a href="rdoc/classes/Roda/RodaPlugins/MultiPublic.html">multi_public</a>: Adds support for serving all files in multiple public directories.</li>
